appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-deployment
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
      - name: appointment-app
        image: 8555936327/appointment
        ports:
        - containerPort: 3001
