patient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
      - name: patient-app
        image: 8555936327/patient
        ports:
        - containerPort: 3000
