appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: microapp
spec:
  type: LoadBalancer
  selector:
    app: appointment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
