nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment
                port:
                  number: 8080

          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient
                port:
                  number: 8080
